# avs-suite

./: .eslintrc.cjs  .gitignore  ANTIVIRUS_INVESTIGATION.md  ARCHITECTURE_REVIEW.md  BACKEND_INITIALIZATION_REPORT.md  BENCHMARK_RESULTS.md  CONTRIBUTING.md  EXPLAINABLE_OPTIMIZATION_REPORT.md  HEALTH_ENGINE_AUDIT.md  HEALTH_SCAN_REPORT.md  LICENSE  LIVE_PERFORMANCE_MONITOR_IMPLEMENTATION_REPORT.md  MEMORY_OPTIMIZER_IMPLEMENTATION_REPORT.md  PERFORMANCE_BASELINE.md  PERFORMANCE_PROFILE.md  PERFORMANCE_REPORT.md  PHASE_2A_COMPLETION_REPORT.md  PHASE_2B_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_AUDIT.md  PRIVACY_CLEANER_IMPLEMENTATION_REPORT.md  RC1_READINESS.md  RC4_ROOT_CAUSE_REPORT.md  README.md  RELEASE_AUDIT_REPORT.md  ROOT_CAUSE_ANALYSIS.md  STARTUP_MANAGER_IMPLEMENTATION_REPORT.md  UX_POLISH_REPORT.md  VALIDATION_REPORT.md  diagnostics.md  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest_out.txt
backend/: PERFORMANCE_PROFILE.json  RELEASE_AUDIT.json  audit_output.txt  audit_output2.txt  avs-backend.spec  build.py  build_log.txt  profile_backend.py  pyproject.toml  pytest.ini  requirements.txt
backend/src/avs_backend/api/: __init__.py  registry.py  rpc_server.py
backend/src/avs_backend/cleaner/: __init__.py  cleaning_manager.py  history_store.py  interfaces.py  recycle_bin.py  safe_paths.py  (+2 more)
backend/tests/: release_audit.py  test_cleaner_engine.py  test_cleaning_engine.py  test_cleaning_manager.py  test_dashboard.py  test_licensing_bridge.py  test_recycle_bin.py  test_registry.py  test_scan_manager.py
(+348 files in other folders)
